--- a/Travel_Agency.html
+++ b/Travel_Agency.html
@@ -234,7 +234,11 @@
           <p class="price">Starting at $1,450</p>
           <div class="bottom">
             <span>7 Days, June 15–21, 2030</span>
-            <span class="learn">Learn More <span class="arrow">→</span></span>
+            <span class="learn">
+              <a href="#">Learn More 
+                <span class="arrow">→</span>
+              </a>
+            </span>
           </div>
         </div>
       </div>
@@ -245,7 +249,11 @@
           <p class="price">Starting at $1,850</p>
           <div class="bottom">
             <span>5 Days, July 10–14, 2030</span>
-            <span class="learn">Learn More <span class="arrow">→</span></span>
+            <span class="learn">
+                <a href="#">Learn More 
+                  <span class="arrow">→</span>
+                </a>
+              </span>
           </div>
         </div>
       </div>
@@ -256,7 +264,11 @@
           <p class="price">Starting at $2,100</p>
           <div class="bottom">
             <span>5 Days, July 3–7, 2030</span>
-            <span class="learn">Learn More <span class="arrow">→</span></span>
+            <span class="learn">
+              <a href="#">Learn More 
+                <span class="arrow">→</span>
+              </a>
+            </span>
           </div>
         </div>
       </div>
@@ -267,7 +279,11 @@
           <p class="price">Starting at $1,600</p>
           <div class="bottom">
             <span>6 Days, September 5–10, 2030</span>
-            <span class="learn">Learn More <span class="arrow">→</span></span>
+            <span class="learn">
+              <a href="#">Learn More 
+                <span class="arrow">→</span>
+              </a>
+            </span>
           </div>
         </div>
       </div>
@@ -278,7 +294,11 @@
           <p class="price">Starting at $3,200</p>
           <div class="bottom">
             <span>10 Days, August 15–25, 2030</span>
-            <span class="learn">Learn More <span class="arrow">→</span></span>
+            <span class="learn">
+              <a href="#">Learn More 
+                <span class="arrow">→</span>
+              </a>
+            </span>
           </div>
         </div>
       </div>
@@ -289,7 +309,11 @@
           <p class="price">Starting at $1,850</p>
           <div class="bottom">
             <span>7 Days, June 12–18, 2030</span>
-            <span class="learn">Learn More <span class="arrow">→</span></span>
+            <span class="learn">
+              <a href="#">Learn More 
+                <span class="arrow">→</span>
+              </a>
+            </span>
           </div>
         </div>
       </div>
