--- a/Wedding_Service.html
+++ b/Wedding_Service.html
@@ -100,7 +100,7 @@
       <div class="grid_services">
         <div class="service-card">
           <div class="arch">
-            <img src="img/venue.jpg" alt="Venue">
+            <img src="img/venue.avif" alt="Venue">
             <div class="label">VENUE</div>
             <div class="service_inner">
              <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
@@ -120,7 +120,7 @@
 
         <div class="service-card">
           <div class="arch">
-            <img src="img/catering.jpg" alt="Catering">
+            <img src="img/catering.avif" alt="Catering">
             <div class="label">CATERING</div>
             <div class="service_inner">
             <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
@@ -142,7 +142,7 @@
 
         <div class="service-card">
           <div class="arch">
-            <img src="img/deco.jpg" alt="Decor">
+            <img src="img/deco.avif" alt="Decor">
             <div class="label">DECOR</div>
             <div class="service_inner">
             <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
